# vidyamobile-eval-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
datasets/: DATASETS.md
datasets/retrieval/: benchmark_dataset.json  retrieval_tests.json
datasets/safety/: ci_scenarios.csv
datasets/tenant/: leakage_probes.json  tenant_a_queries.json  tenant_b_queries.json
eval/: drift_dashboard.py  retrieval_eval.py  safety_eval.py  tenant_eval.py
eval_service/: __init__.py  config.py  main.py
eval_service/chunkers/: __init__.py  academic.py  base.py  slides.py  syllabus.py
eval_service/difficulty/: __init__.py  features.py  predictor.py  simulator.py  topics.py  train.py  trainer.py
eval_service/embeddings/: __init__.py  gemini.py
eval_service/mastery/: __init__.py  algorithm.py  scheduler.py  state.py
eval_service/monitoring/: __init__.py  collector.py  drift.py
eval_service/retrieval/: __init__.py  client.py  gate_checker.py  metrics.py  offline_retrieval.py  params.py
eval_service/safety/: __init__.py  client.py  dataset.py  labels.py
eval_service/tenant/: __init__.py  client.py  gates.py  leakage_eval.py  seed_kb.py  tenant_eval.py
history/: metrics.jsonl
routers/: chunk.py  embed.py  health.py  mastery.py
supabase/: config.toml
supabase/migrations/: 20260606000001_core_schema_v0.sql  20260608000002_messages_v1.sql  20260608000003_vector_store_v0.sql  20260608000004_match_chunks_v0.sql  (+2 more)
tests/: conftest.py
tests/unit/: test_chunkers.py  (+7 more)
(+5 files in other folders)
