[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vidyamobile-eval-service"
version = "0.1.0"
description = "VidyaMobile evaluation & mastery service (SK-01 through SK-11)"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Sarthak K.", email = "sarthak.k@intern.doteventures.com" },
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "google-genai>=0.7",
    "supabase>=2.4",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",        # TestClient
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
eval-service = "eval_service.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["eval_service*", "routers*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts      = "-v --tb=short"

[tool.ruff]
line-length    = 100
target-version = "py311"
select         = ["E", "F", "I", "UP"]
ignore         = ["E501"]

[tool.mypy]
python_version         = "3.11"
strict                 = false
ignore_missing_imports = true
